[#4] Fix alignment of text under search bar on home page

--- a/ckanext/ecportal/public/css/ecportal.css
+++ b/ckanext/ecportal/public/css/ecportal.css
@@ -685,10 +685,6 @@ input#txtSearchData {
   margin: 20px 0 18px;
 }
 
-#ckan-form p{
-  margin: 0px 65px;
-}
-
 .grouped-buttons {
   display:block;
   border-bottom:#bbbbbb 1px solid;
